--- a/packages/wallets/gameshift/package.json
+++ b/packages/wallets/gameshift/package.json
@@ -35,7 +35,8 @@
         "@solana/web3.js": "^1.98.0"
     },
     "dependencies": {
-        "@solana/wallet-adapter-base": "^0.9.27"
+        "@solana/wallet-adapter-base": "^0.9.27",
+        "metakeep": "^2.2.8"
     },
     "devDependencies": {
         "@solana/web3.js": "^1.98.2",
